public interface HasPosition {
    Vector2 getPos();
}
