public interface Loadable extends HasPosition, Positionable {
}
