public interface Positionable {
    void setPos(Vector2 pos);
}
