@startuml

class java.awt.image.BufferedImage {
}

class java.awt.Point {
}

class javax.swing.Timer {
}

class javax.swing.JFrame {
}

class javax.swing.JPanel {
	{method} #paintComponent ( g : java.awt.Graphics ) : void
}

abstract class org.tda553group22.lab3.main.CanLoadHelper {
	{field} #capacity : int
	{field} #cargo : java.util.ArrayList
	{method} +load ( paramLoadable1 : org.tda553group22.lab3.main.Loadable ) : void
}


class org.tda553group22.lab3.main.CanLoadHelperFirstInFirstOut {
	{method} +unload () : java.util.Optional
}


class org.tda553group22.lab3.main.CanLoadHelperFirstInLastOut {
	{method} +unload () : java.util.Optional
}


class org.tda553group22.lab3.main.CanLoadHelperUnordered {
	{method} +unload ( paramLoadable1 : org.tda553group22.lab3.main.Loadable ) : void
}


interface org.tda553group22.lab3.main.CanLoadOrdered {
	{method}  {abstract} +load ( paramLoadable1 : org.tda553group22.lab3.main.Loadable ) : void
	{method}  {abstract} +unload () : java.util.Optional
}


interface org.tda553group22.lab3.main.CanLoadUnordered {
	{method}  {abstract} +load ( paramLoadable1 : org.tda553group22.lab3.main.Loadable ) : void
	{method}  {abstract} +unload ( paramLoadable1 : org.tda553group22.lab3.main.Loadable ) : void
}


abstract class org.tda553group22.lab3.main.Car {
	{field} #nrDoors : int
}


class org.tda553group22.lab3.main.CarController {
	{field} ~cars : java.util.ArrayList
	{field} -delay : int
	{field} -timer : javax.swing.Timer
    {method}  {static} +main ( paramString;1 : [Ljava.lang.String; ) : void
	{method} ~brake ( paramint1 : int ) : void
	{method} ~gas ( paramint1 : int ) : void
	{method} ~lowerBed () : void
	{method} ~raiseBed () : void
	{method} ~startEngine () : void
	{method} ~stopEngine () : void
	{method} ~turboOff () : void
	{method} ~turboOn () : void
}



class org.tda553group22.lab3.main.CarFerry {
	{field} -carLanes : int
	{field} -laneCanLoadHelpers : java.util.ArrayList
	{method} +load ( paramCar1 : org.tda553group22.lab3.main.Car , paramint2 : int ) : void
	{method} +unload ( paramint1 : int ) : java.util.Optional
	{method} #speedFactor () : double
}


class org.tda553group22.lab3.main.CarTransporter {
	{field} -maxLoadDistance : double
	{field} -rampDown : boolean
	{method} +load ( paramLoadable1 : org.tda553group22.lab3.main.Loadable ) : void
	{method} +load ( paramPersonCar1 : org.tda553group22.lab3.main.PersonCar ) : void
	{method} +unload () : java.util.Optional
	{method} +raiseRamp () : void
	{method} +lowerRamp () : void
	{method} +move () : void
	{method} #speedFactor () : double
}


class org.tda553group22.lab3.main.CarView {
	{field} {static} -X : int
	{field} {static} -Y : int
	{field} ~brakeButton : javax.swing.JButton
	{field} ~controlPanel : javax.swing.JPanel
	{field} ~gasAmount : int
	{field} ~gasButton : javax.swing.JButton
	{field} ~gasLabel : javax.swing.JLabel
	{field} ~gasPanel : javax.swing.JPanel
	{field} ~gasSpinner : javax.swing.JSpinner
	{field} ~liftBedButton : javax.swing.JButton
	{field} ~lowerBedButton : javax.swing.JButton
	{field} ~startButton : javax.swing.JButton
	{field} ~stopButton : javax.swing.JButton
	{field} ~turboOffButton : javax.swing.JButton
	{field} ~turboOnButton : javax.swing.JButton
}

class org.tda553group22.lab3.main.DrawPanel {
	{field} ~saabImage : java.awt.image.BufferedImage
	{field} ~saabPoint : java.awt.Point
	{field} ~scaniaImage : java.awt.image.BufferedImage
	{field} ~scaniaPoint : java.awt.Point
	{field} ~volvoImage : java.awt.image.BufferedImage
	{field} ~volvoPoint : java.awt.Point
	{field} ~volvoWorkshopImage : java.awt.image.BufferedImage
	{field} ~volvoWorkshopPoint : java.awt.Point
	{method} ~moveit ( paramHasPosition1 : org.tda553group22.lab3.main.HasPosition ) : void
	{method} #paintComponent ( paramGraphics1 : java.awt.Graphics ) : void
}


abstract class org.tda553group22.lab3.main.EngineVehicle {
	{field} #enginePower : double
	{method} +startEngine () : void
    {method} +stopEngine () : void
	{method} +gas ( paramdouble1 : double ) : void
	{method} +brake ( paramdouble1 : double ) : void
	   {method} -incrementSpeed ( paramdouble1 : double ) : void
	{method} -decrementSpeed ( paramdouble1 : double ) : void
	{method}  {abstract} #speedFactor () : double
}


interface org.tda553group22.lab3.main.HasPosition {
	{method}  {abstract} +getPos () : org.tda553group22.lab3.main.Vector2
}


interface org.tda553group22.lab3.main.Loadable {
}


interface org.tda553group22.lab3.main.Movable {
	{method}  {abstract} +move () : void
	{method}  {abstract} +turnLeft () : void
	{method}  {abstract} +turnRight () : void
}


abstract class org.tda553group22.lab3.main.PersonCar {
}


interface org.tda553group22.lab3.main.Positionable {
	{method}  {abstract} +setPos ( paramVector21 : org.tda553group22.lab3.main.Vector2 ) : void
}


class org.tda553group22.lab3.main.Saab95 {
	{field} -turboOn : boolean
	{method} +setTurboOff () : void
	{method} #speedFactor () : double
}


class org.tda553group22.lab3.main.Scania {
	{method} #speedFactor () : double
}


abstract class org.tda553group22.lab3.main.Truck {
	{field} #bedAngle : double
	{field} #maxBedAngle : double
	{method} +lowerBed ( paramdouble1 : double ) : void
	{method} +raiseBed ( paramdouble1 : double ) : void
}


class org.tda553group22.lab3.main.Vector2 {
	{field} +x : double
	{field} +y : double
	{method} +add ( paramVector21 : org.tda553group22.lab3.main.Vector2 ) : org.tda553group22.lab3.main.Vector2
	{method} +clamp ( paramVector21 : org.tda553group22.lab3.main.Vector2 , paramVector22 : org.tda553group22.lab3.main.Vector2 ) : org.tda553group22.lab3.main.Vector2
	{method} +distance ( paramVector21 : org.tda553group22.lab3.main.Vector2 ) : double
	{method} +div ( paramdouble1 : double ) : org.tda553group22.lab3.main.Vector2
	{method} +div ( paramVector21 : org.tda553group22.lab3.main.Vector2 ) : org.tda553group22.lab3.main.Vector2
	{method} +equals ( paramObject1 : Object ) : boolean
	{method} +inv () : org.tda553group22.lab3.main.Vector2
	{method} +magnitude () : double
	{method} +magnitudeSquared () : double
	{method} +mul ( paramdouble1 : double ) : org.tda553group22.lab3.main.Vector2
	{method} +mul ( paramVector21 : org.tda553group22.lab3.main.Vector2 ) : org.tda553group22.lab3.main.Vector2
	{method} +normalized () : org.tda553group22.lab3.main.Vector2
	{method} +sub ( paramVector21 : org.tda553group22.lab3.main.Vector2 ) : org.tda553group22.lab3.main.Vector2
	{method}  {static} +zero () : org.tda553group22.lab3.main.Vector2
}


abstract class org.tda553group22.lab3.main.Vehicle {
	{field} -angle : double
	{field} +color : java.awt.Color
	{field} #currentSpeed : double
	{field} #modelName : String
	{method} -turn ( paramdouble1 : double ) : void
	{method} +move () : void
	{method} +turnLeft () : void
	{method} +turnRight () : void
}


class org.tda553group22.lab3.main.Volvo240 {
	{field} {static} -trimFactor : double
	{method} #speedFactor () : double
}


class org.tda553group22.lab3.main.Workshop {
	{method} +load ( paramCar1 : org.tda553group22.lab3.main.Car ) : void
	{method} +load ( paramLoadable1 : org.tda553group22.lab3.main.Loadable ) : void
	{method} +unload ( paramCar1 : org.tda553group22.lab3.main.Car ) : void
	{method} +unload ( paramLoadable1 : org.tda553group22.lab3.main.Loadable ) : void
}


class org.tda553group22.lab3.main.WorkshopWithPosition {
}




org.tda553group22.lab3.main.CanLoadHelperFirstInFirstOut --|>  org.tda553group22.lab3.main.CanLoadHelper
org.tda553group22.lab3.main.CanLoadHelperFirstInFirstOut ..|>  org.tda553group22.lab3.main.CanLoadOrdered
org.tda553group22.lab3.main.CanLoadHelperFirstInLastOut --|>  org.tda553group22.lab3.main.CanLoadHelper
org.tda553group22.lab3.main.CanLoadHelperFirstInLastOut ..|>  org.tda553group22.lab3.main.CanLoadOrdered
org.tda553group22.lab3.main.CanLoadHelperUnordered --|>  org.tda553group22.lab3.main.CanLoadHelper
org.tda553group22.lab3.main.CanLoadHelperUnordered ..|>  org.tda553group22.lab3.main.CanLoadUnordered
org.tda553group22.lab3.main.Car --|>  org.tda553group22.lab3.main.EngineVehicle
org.tda553group22.lab3.main.CarController -->  org.tda553group22.lab3.main.CarView : frame
org.tda553group22.lab3.main.CarController -->  org.tda553group22.lab3.main.WorkshopWithPosition : volvoWorkshop
org.tda553group22.lab3.main.CarFerry --|>  org.tda553group22.lab3.main.EngineVehicle
org.tda553group22.lab3.main.CarTransporter -->  org.tda553group22.lab3.main.CanLoadHelperFirstInLastOut : canLoadHelper
org.tda553group22.lab3.main.CarTransporter --|>  org.tda553group22.lab3.main.Car
org.tda553group22.lab3.main.CarTransporter ..|>  org.tda553group22.lab3.main.CanLoadOrdered
org.tda553group22.lab3.main.CarView -->  org.tda553group22.lab3.main.CarController : carC
org.tda553group22.lab3.main.CarView -->  org.tda553group22.lab3.main.DrawPanel : drawPanel
org.tda553group22.lab3.main.EngineVehicle --|>  org.tda553group22.lab3.main.Vehicle
org.tda553group22.lab3.main.Loadable ..|>  org.tda553group22.lab3.main.HasPosition
org.tda553group22.lab3.main.Loadable ..|>  org.tda553group22.lab3.main.Positionable
org.tda553group22.lab3.main.PersonCar --|>  org.tda553group22.lab3.main.Car
org.tda553group22.lab3.main.Saab95 --|>  org.tda553group22.lab3.main.PersonCar
org.tda553group22.lab3.main.Scania --|>  org.tda553group22.lab3.main.Truck
org.tda553group22.lab3.main.Truck --|>  org.tda553group22.lab3.main.Car
org.tda553group22.lab3.main.Vehicle -->  org.tda553group22.lab3.main.Vector2 : pos
org.tda553group22.lab3.main.Vehicle ..|>  org.tda553group22.lab3.main.Loadable
org.tda553group22.lab3.main.Vehicle ..|>  org.tda553group22.lab3.main.Movable
org.tda553group22.lab3.main.Volvo240 --|>  org.tda553group22.lab3.main.PersonCar
org.tda553group22.lab3.main.Workshop -->  org.tda553group22.lab3.main.CanLoadHelperUnordered : canLoadHelper
org.tda553group22.lab3.main.Workshop ..|>  org.tda553group22.lab3.main.CanLoadUnordered
org.tda553group22.lab3.main.WorkshopWithPosition -->  org.tda553group22.lab3.main.Vector2 : pos
org.tda553group22.lab3.main.WorkshopWithPosition --|>  org.tda553group22.lab3.main.Workshop
org.tda553group22.lab3.main.WorkshopWithPosition ..|>  org.tda553group22.lab3.main.HasPosition

org.tda553group22.lab3.main.CarController ..>  java.awt.image.BufferedImage : use
org.tda553group22.lab3.main.CarController ..>  javax.swing.Timer : use
org.tda553group22.lab3.main.CarController ..>  java.awt.Point : use
org.tda553group22.lab3.main.CarView --|>  javax.swing.JFrame
org.tda553group22.lab3.main.CarView ..>  java.awt.Point : use
org.tda553group22.lab3.main.DrawPanel ..>  java.awt.Point : use
org.tda553group22.lab3.main.DrawPanel --|>  javax.swing.JPanel
org.tda553group22.lab3.main.DrawPanel -->  java.awt.image.BufferedImage
org.tda553group22.lab3.main.DrawPanel -->  java.awt.Point : pos

org.tda553group22.lab3.main.CarController ..>  org.tda553group22.lab3.main.Car : use
org.tda553group22.lab3.main.CarController ..>  org.tda553group22.lab3.main.Volvo240 : use
org.tda553group22.lab3.main.CarController ..>  org.tda553group22.lab3.main.Saab95 : use
org.tda553group22.lab3.main.CarController ..>  org.tda553group22.lab3.main.Scania : use
org.tda553group22.lab3.main.CarController ..>  org.tda553group22.lab3.main.Vector2 : use

org.tda553group22.lab3.main.DrawPanel ..>  org.tda553group22.lab3.main.Volvo240 : use
org.tda553group22.lab3.main.DrawPanel ..>  org.tda553group22.lab3.main.Saab95 : use
org.tda553group22.lab3.main.DrawPanel ..>  org.tda553group22.lab3.main.Scania : use
org.tda553group22.lab3.main.DrawPanel ..>  org.tda553group22.lab3.main.WorkshopWithPosition : use

@enduml
